--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ textarea {
 p {font-size: 13pt;}
 button {font-size: 13pt;}
 	
-@media only screen and (max-width:361px) {
+@media screen and (max-width:361px) {
 	
 textarea {
 	background-color: #d4efff;
