--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
 body {
 	background-color: azure;
-	background-image: url(pic/abjad_png.png);
-	background-repeat: no-repeat;
-	background-position: center;
 }
 	
 textarea {
@@ -24,7 +21,12 @@ textarea {
 }
 
 #text {
-	margin-left: 25%;	
+	margin-left: 25%;
+	margin-left: 25%;
+    background-image: url(pic/abjad_png.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50% 0%;
 }
 
 #baslik {
