--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ textarea {
 p {font-size: 13pt;}
 button {font-size: 13pt;}
 	
-@media screen and (max-width:361px) {
+@media only screen and (max-width: 361px) {
 	
 textarea {
 	background-color: #d4efff;
