--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@ textarea {
 p {font-size: 13pt;}
 button {font-size: 13pt;}
 	
-@media only screen and (max-width: 361px) {
+@media only screen and (max-width: 761px) {
 	
+body {
+	background-color: blue;
+}
+
 textarea {
 	background-color: #d4efff;
 	font-size: 12pt;
