--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html onkeydown='startwork(event)'>
 <head>
 <title>Abjad Value Calculator</title>
+<meta name="viewport" content="width=device-width" />
 <meta content='http://abjad.quran114.org/' property='og:url'/>
 <meta content='Abjad Value Calculator' property='og:title'/>
 <meta content='Online Abjad/Gematrical/Numerical Value Calculator' property='og:description'/>
