--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@ textarea {
 	margin-left: 10%;
 }
 
-#text {margin-left: 5%}
+#text {
+	margin-left: 10%
+	background-position: 80% 0%;
+}
 	
 }
 
@@ -66,7 +69,18 @@ textarea {
 	margin-left: 5%;
 }
 
-#text {margin-left: 5%}
+#text {
+	margin-left: 5%;
+	background-position: 80% 0%;
+}
+
+}
+
+@media only screen and (max-width: 375px) {
+
+#text {
+	background-position: 90% 0%;
+}
 
 }
 </style>
