--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ textarea {
 	margin-left: 25%;
 }
 
+#coder {
+	margin-top: 19%;
+	padding-bottom: 0px;
+	text-align: center;
+}
+
 #text {
 	margin-left: 25%;
 	margin-left: 25%;
@@ -96,7 +102,7 @@ textarea {
 	<p id="words"></p>
 	<button id="kopyala"> Copy Results </button>
 </div>
-
+<p id="coder">Developed by <a href="http://www.QuranisEnough.com">QuranisEnough.com</a></p>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
 
