--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@ textarea {
 
 #coder {
 	margin-top: 19%;
-	padding-bottom: 0px;
 	text-align: center;
+	font-size: 12pt;
 }
 
 #text {
 	margin-left: 25%;
 	margin-left: 25%;
-    background-image: url(pic/abjad_png.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 50% 0%;
+	background-image: url(pic/abjad_png.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: 50% 0%;
 }
 
 #baslik {
@@ -73,6 +73,11 @@ textarea {
 textarea {
 	width: 90%;
 	margin-left: 5%;
+}
+
+#coder {
+	margin-top: 36%;
+	font-size: 11pt;
 }
 
 #text {
