--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@ textarea {
 }
 
 #coder {
-	margin-top: 19%;
-	text-align: center;
+	position: fixed;
+	margin-left: -113px;
+	left: 50%;
+	bottom: 0px;
 }
 
 #text {
@@ -75,8 +77,8 @@ textarea {
 }
 
 #coder {
-	margin-top: 36%;
 	font-size: 11pt;
+	margin-left: -103px;
 }
 
 #text {
