--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@ textarea {
 }
 
 #coder {
-	position: absolute;
-	margin-left: -113px;
-	left: 50%;
-	bottom: 0px;
+	text-align: center;
 }
 
 #text {
@@ -78,7 +75,6 @@ textarea {
 
 #coder {
 	font-size: 11pt;
-	margin-left: -103px;
 }
 
 #text {
@@ -107,7 +103,7 @@ textarea {
 	<p id="letters"></p>
 	<p id="words"></p>
 	<button id="kopyala"> Copy Results </button>
-</div>
+</div><br><br><br><br><br><br><br><br>
 <p id="coder">Developed by <a href="http://www.QuranisEnough.com">QuranisEnough.com</a></p>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
