--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@ textarea {
 	margin-left: 25%;
 }
 
-#coder {
-	text-align: center;
-}
-
 #text {
 	margin-left: 25%;
 	margin-left: 25%;
@@ -73,10 +69,6 @@ textarea {
 	margin-left: 5%;
 }
 
-#coder {
-	font-size: 11pt;
-}
-
 #text {
 	margin-left: 5%;
 	background-position: 80% 0%;
@@ -103,8 +95,7 @@ textarea {
 	<p id="letters"></p>
 	<p id="words"></p>
 	<button id="kopyala"> Copy Results </button>
-</div><br><br><br><br><br><br><br><br>
-<p id="coder">Developed by <a href="http://www.QuranisEnough.com">QuranisEnough.com</a></p>
+</div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
 
