--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ textarea {
 #text {
 	margin-left: 25%;
 	margin-left: 25%;
-	background-image: url(pic/abjad_png.png);
+	background-image: url(pic/abjad.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: 50% 0%;
