--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ $("#box").on('keyup',function(){
   if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
   
 	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
-	document.getElementById("letters").innerHTML = "Letters: " + harf;
-	document.getElementById("words").innerHTML = "Words: " + kelime;
+	document.getElementById("letters").innerHTML = "Count of Letters: " + harf;
+	document.getElementById("words").innerHTML = "Count of Words: " + kelime;
 	
-	mesaj = "Abjad Value: " + ebced + "\n" + "Count of letters: " + harf + "\n" + "Count of words: " + kelime;
+	mesaj = "Abjad Value: " + ebced + "\n" + "Count of Letters: " + harf + "\n" + "Count of Words: " + kelime;
 
 	document.querySelector("#kopyala").onclick = function() {
 		var result = copyToClipboard(mesaj);
