--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ $("#box").on('keyup',function(){
     
   if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
   
-	document.getElementById("abjad").innerHTML = "ABJAD value: " + ebced;
+	document.getElementById("abjad").innerHTML = "ABJAD Value: " + ebced;
 	document.getElementById("letters").innerHTML = "Number of LETTERS: " + harf;
 	document.getElementById("words").innerHTML = "Number of WORDS: " + kelime;
 	
