--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@ textarea {
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: 50% 0%;
-	opacity: 0.9;
 }
 
 textarea:focus {
@@ -82,6 +81,12 @@ textarea {
 #text {
 	margin-left: 5%;
 }
+
+}
+
+@media only screen and (max-width: 375px) {
+
+	textarea {background-position: 38% 0%}
 
 }
 </style>
