--- a/index.html
+++ b/index.html
@@ -210,12 +210,18 @@ $("#box").on('keyup',function(){
   if (letters(inputValue) % 19 === 0) {var harf = letters(inputValue) + " = 19 × " + letters(inputValue)/19;}else{var harf = letters(inputValue);}
     
   if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
-  
+	
+if (abjad(inputValue) = null){
+	document.getElementById("abjad").innerHTML = "";
+	document.getElementById("letters").innerHTML = "";
+	document.getElementById("words").innerHTML = "";
+	mesaj = "";
+}else{
 	document.getElementById("abjad").innerHTML = "ABJAD Value: " + ebced;
 	document.getElementById("letters").innerHTML = "Number of LETTERS: " + harf;
 	document.getElementById("words").innerHTML = "Number of WORDS: " + kelime;
-	
 	mesaj = "ABJAD Value: " + ebced + "\n" + "Number of LETTERS: " + harf + "\n" + "Number of WORDS: " + kelime;
+}
 
 	document.querySelector("#kopyala").onclick = function() {
 		var result = copyToClipboard(mesaj);
