--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ textarea {
 }
 
 textarea:focus {
-	background-image:none;
-	background-color: rgb(212, 255, 219);
+	background-image: none;
+	background-color: #d4fff3;
 }
 
 #text {
