--- a/index.html
+++ b/index.html
@@ -203,21 +203,23 @@ function copyToClipboard(text) {
 	}
 }
 
-$("#box").on('keyup',function(){
-	inputValue = document.getElementById("box").value;
+$("#box").keyup( function(){
+	inputValue = $(this).val();
+if(inputValue) {
+	if (abjad(inputValue) % 19 === 0) {var ebced = abjad(inputValue) + " = 19 × " + abjad(inputValue)/19;}else{var ebced = abjad(inputValue);}
+	if (letters(inputValue) % 19 === 0) {var harf = letters(inputValue) + " = 19 × " + letters(inputValue)/19;}else{var harf = letters(inputValue);}
+	if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
 	
-  if (abjad(inputValue) % 19 === 0) {var ebced = abjad(inputValue) + " = 19 × " + abjad(inputValue)/19;}else{var ebced = abjad(inputValue);}
-  
-  if (letters(inputValue) % 19 === 0) {var harf = letters(inputValue) + " = 19 × " + letters(inputValue)/19;}else{var harf = letters(inputValue);}
-    
-  if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
-	
-	document.getElementById("abjad").innerHTML = "ABJAD Value: " + ebced;
-	document.getElementById("letters").innerHTML = "Number of LETTERS: " + harf;
-	document.getElementById("words").innerHTML = "Number of WORDS: " + kelime;
-
+	$("#abjad").html("ABJAD Value: " + ebced);
+	$("#letters").html("Number of LETTERS: " + harf);
+	$("#words").html("Number of WORDS: " + kelime);
 	mesaj = "ABJAD Value: " + ebced + "\n" + "Number of LETTERS: " + harf + "\n" + "Number of WORDS: " + kelime;
-
+}else{
+	$("#abjad").html("");
+	$("#letters").html("");
+	$("#words").html("");
+	mesaj == "";
+};
 	document.querySelector("#kopyala").onclick = function() {
 		var result = copyToClipboard(mesaj);
 		console.log("copied?", result);
