--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ textarea {
 	direction: rtl;
 	width: 50%;
 	margin-left: 25%;
-	background-image: url(pic/abjadback.png);
+	background-image: url(pic/abc.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: 50% 0%;
@@ -82,12 +82,6 @@ textarea {
 #text {
 	margin-left: 5%;
 }
-
-}
-
-@media only screen and (max-width: 375px) {
-
-	textarea {background-position: 38% 0%}
 
 }
 </style>
