--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ textarea {
 	direction: rtl;
 	width: 50%;
 	margin-left: 25%;
-	background-image: url(pic/abc.png);
+	background-image: url(pic/abjadback.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: 50% 0%;
@@ -84,6 +84,13 @@ textarea {
 }
 
 }
+	
+@media only screen and (max-width: 375px) {
+
+	background-image: url(pic/abc.png);
+
+}
+
 </style>
 </head>
 
