--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ textarea {
 }
 	
 @media only screen and (max-width: 375px) {
-
-	background-image: url(pic/abc.png);
+	
+textarea {background-image: url(pic/abc.png)}
 
 }
 
