--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ textarea {background-image: url(pic/abc.png)}
 <p id="baslik">Abjad Value Calculator:</p>
 <textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
 <br>
-<div id="back"><img src="pic/abjad_png.png"></img></div>
+<div id="back"><img src="pic/book arabic.png"></img></div>
 <div id="text">
 	<p id="abjad"></p>
 	<p id="letters"></p>
