--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@ body {
 #back {
     position: absolute;
     z-index: -1;
-    opacity: 0.07;
+    opacity: 0.19;
     left: 50%;
-    margin-left: -120px;
+    margin-left: -150.68px;
+}
+
+#book {
+	width: 343px;
+	padding-top: 38px;
 }
 
 textarea {
@@ -98,7 +103,7 @@ textarea {background-image: url(pic/abc.png)}
 <p id="baslik">Abjad Value Calculator:</p>
 <textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
 <br>
-<div id="back"><img src="pic/book arabic.png"></img></div>
+<div id="back"><img id="book" src="pic/book arabic.png"></img></div>
 <div id="text">
 	<p id="abjad"></p>
 	<p id="letters"></p>
