--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ textarea {
 	direction: rtl;
 	width: 50%;
 	margin-left: 25%;
-	background-image: url(pic/abjadback.png);
+	background-image: url(pic/background.png);
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 	background-position: 50% 0%;
 }
 
