--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@ textarea {
 	direction: rtl;
 	width: 50%;
 	margin-left: 25%;
-	background-image: url(pic/background.png);
+	background-image: url(pic/abjadback.png);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
 	background-position: 50% 0%;
 }
 
 textarea:focus {
-	background-image: none;
+	background-image: url(pic/background.png);
+	background-size: cover;
 	background-color: #d4fff3;
 }
 
