--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@ body {
     position: absolute;
     z-index: -1;
     opacity: 0.19;
-    left: 50%;
-    margin-left: -150.68px;
 }
 
 #book {
-	width: 343px;
+	width: 50%;
 	padding-top: 38px;
 }
 
 textarea {
 	background-color: #d4efff;
+	border-radius: 2px;
 	font-size: 12pt;
 	direction: rtl;
 	width: 50%;
@@ -104,7 +103,7 @@ textarea {background-image: url(pic/abc.png)}
 <p id="baslik">Abjad Value Calculator:</p>
 <textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
 <br>
-<div id="back"><img id="book" src="pic/book arabic.png"></img></div>
+	<center><div id="back"><img id="book" src="pic/book arabic.png"></img></div></center>
 <div id="text">
 	<p id="abjad"></p>
 	<p id="letters"></p>
