--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@ body {
     position: absolute;
     z-index: -1;
     opacity: 0.19;
+    left: 50%;
+    margin-left: -150.68px;
 }
 
 #book {
-	width: 50%;
+	width: 343px;
 	padding-top: 38px;
 }
 
@@ -103,7 +105,7 @@ textarea {background-image: url(pic/abc.png)}
 <p id="baslik">Abjad Value Calculator:</p>
 <textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
 <br>
-	<center><div id="back"><img id="book" src="pic/book arabic.png"></img></div></center>
+<div id="back"><img id="book" src="pic/book arabic.png"></img></div>
 <div id="text">
 	<p id="abjad"></p>
 	<p id="letters"></p>
