--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ textarea {background-image: url(pic/abc.png)}
 
 <body>
 <p id="baslik">Abjad Value Calculator:</p>
-<textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
+<textarea placeholder="...Start typing" id="box" rows="6" cols="75" pattern="/[ء-ي]/igm"></textarea>
 <br>
 <div id="back"><img id="book" src="pic/book arabic.png"></img></div>
 <div id="text">
