--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ function startwork(event){
 }
 
 $('#box').on('input', function (event) { 
-    this.value = this.value.replace(/[^ء-ي ]/igm, '');
+    this.value = this.value.replace(/[^ء-ي ﻻﻹﻷﻵ]/igm, '');
 });
 
 function copyToClipboard(text) {
