--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@ function val(yazı,harf,değer){
 	return sonuc;
 }
 
-function letters (string) { return string.match(/[ء-ي]/igm).length }
+function letters (string) { return string.match(/[ء-يﻻﻹﻷﻵ]/igm).length }
 function words(string){
 	y = string.split(/\s+/).filter(
 		function(string){
-			word = string.match(/[ء-ي]+/igm);
+			word = string.match(/[ء-يﻻﻹﻷﻵ]+/igm);
 			return word && word[0].length > 0;
 		}
 	);
@@ -186,7 +186,11 @@ function abjad (string) {
 	ض = val(string,'ض','800');
 	ظ = val(string,'ظ','900');
 	غ = val(string,'غ','1000');
-	return ء+ا+آ+ٱ+أ+إ+ب+پ+ج+چ+د+ه+ة+و+ؤ+ز+ژ+ح+ط+ی+ي+ئ+ى+ک+ك+گ+ڭ+ل+م+ن+س+ع+ف+ڢ+ڤ+ص+ق+ڨ+ر+ش+ت+ث+خ+ذ+ض+ظ+غ
+	ﻻ = val(string,'ﻻ','31');
+	ﻹ = val(string,'ﻹ','31');
+	ﻷ = val(string,'ﻷ','31');
+	ﻵ = val(string,'ﻵ','31');
+	return ء+ا+آ+ٱ+أ+إ+ب+پ+ج+چ+د+ه+ة+و+ؤ+ز+ژ+ح+ط+ی+ي+ئ+ى+ک+ك+گ+ڭ+ل+م+ن+س+ع+ف+ڢ+ڤ+ص+ق+ڨ+ر+ش+ت+ث+خ+ذ+ض+ظ+غ+ﻻ+ﻹ+ﻷ+ﻵ
 }
 
 function startwork(event){
